--- a/Projet/.settings/org.eclipse.wst.common.component
+++ b/Projet/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <property name="context-root" value="TP12-WEB-EJB-PC-EPC-E"/>
         <property name="java-output-path" value="/TP12-WEB-EJB-PC-EPC-E-solution/target/classes"/>
+        <property name="context-root" value="projet"/>
     </wb-module>
 </project-modules>
