--- a/Projet/src/main/webapp/WEB-INF/templates/footer.xhtml
+++ b/Projet/src/main/webapp/WEB-INF/templates/footer.xhtml
@@ -6,7 +6,8 @@
 <title>My Music DB</title>
 </head>
 <body>
-<br></br>
-<div style="background-color:#4b9859;width:100%;color:white">Made by Nancy and Elsio</div>
+	<br></br>
+	<div style="background-color:#4b9859; font-size:18px; vertical-align: center; width: 100%; color:white; height:40px">(c)
+		Made by Nancy Zappellaz and Elsio Violante Coelho - FIG-606_3</div>
 </body>
 </html>
